--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@
 
 body {
   min-width: 960px;
-  height:100%;
   padding-bottom:40px;
   background:url("img/bg.jpg");
   font-family: 'Cabin', Helvetica, sans-serif;
@@ -141,6 +140,44 @@ a:hover {
 }
 .header .btn:hover {
   background:#64000C;
+}
+#mc_embed_signup {
+  width:600px;
+  margin:10px auto;
+}
+input.text {
+  padding: 8px 10px;
+  font-size: 18px;
+  background: #333;
+  border: 4px solid white;
+  border-radius: 10px;
+  width: 220px;
+}
+input.btn {
+  width:220px;
+}
+.mc-field-group {
+  padding:10px 0px;
+}
+label {
+  margin:5px;
+  font-size:18px;
+}
+li {
+  list-style:none;
+}
+.indicates-required {
+  color:#64000C;
+  font-size:12px;
+}
+.footer {
+  padding:60px 0px;
+  font-size:12px;
+  text-align:center;
+  text-transform:uppercase;
+}
+.footer a {
+  color:#F7323F;
 }
 /* `Container
 ----------------------------------------------------------------------------------------------------*/
