--- a/styles.css
+++ b/styles.css
@@ -152,6 +152,11 @@ input.text {
   border: 4px solid white;
   border-radius: 10px;
   width: 220px;
+  color:#ffffff;
+}
+input.text:focus {
+  border-color:#F7323F;
+  outline:none;
 }
 input.btn {
   width:220px;
