--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@
 body {
   min-width: 960px;
   padding-bottom:40px;
-  background:url("img/bg.jpg");
+  background:url("http://spacebartomoneyshot.com/img/bg.jpg");
   font-family: 'Cabin', Helvetica, sans-serif;
   color:#ffffff;
 }
