--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ hr.soften {
   right: 0px;
   height: 200px;
   width: 346px;
-  background:url("img/money.png") no-repeat center 30px;
+  background:url("http://spacebartomoneyshot.com/img/money.png") no-repeat center 30px;
 }
 #moneyshot h1 {
   font-size:50px;
